# mission2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  main.py  ui.py
app/api/: __init__.py
app/api/routes/: __init__.py  chat.py  health.py
app/core/: __init__.py  config.py  prompts.py
app/graph/: __init__.py  edges.py  graph.py  nodes.py  state.py
app/repositories/: __init__.py  fan_letter.py  rag.py  schedule.py
app/schemas/: chat.py
app/tools/: __init__.py  executor.py
data/: lumi_worldview_v1.0.md  lumi_worldview_v2.5.md  supabase_schema.sql
data/scripts/: __init__.py  ingest_data.py  ingest_rag.py
scripts/: ai_reviewer.py
tests/: __init__.py  test_agent.py  test_api.py
