# 5강: Production 배포
# uv 패키지 관리자를 사용하는 프로젝트 설정 파일
#
# 사용법:
#   uv sync          # 의존성 설치
#   uv run uvicorn app.main:app --reload  # 서버 실행
#   docker-compose up --build             # Docker로 실행
#   uv run pytest tests/ -v               # 테스트 실행
#
# 5강 변경사항:
#   - Docker 빌드에서 사용
#   - Production 환경 최적화

[project]
name = "lumi-agent"
version = "0.5.0"
description = "루미(Lumi) - 버추얼 아이돌 AI 에이전트 서비스"
readme = "README.md"
requires-python = ">=3.11"

# 핵심 의존성
# - LangGraph: 에이전트 워크플로우 프레임워크
# - FastAPI: 비동기 웹 프레임워크
# - Upstage: Solar LLM API
# - Supabase: PostgreSQL + pgvector 데이터베이스
dependencies = [
    # ===== LangGraph & LangChain =====
    "langgraph>=1.0.0",                  # 그래프 기반 에이전트 프레임워크
    "langchain-core>=1.0.0",             # LangChain 핵심 모듈 
    "langchain-upstage>=0.5.0",          # Upstage Solar API 연동 
    "langchain-community>=0.3.0",        # 커뮤니티 통합 모듈

    # ===== Web Framework =====
    "fastapi>=0.125.0",                  # 비동기 웹 프레임워크 
    "uvicorn[standard]>=0.32.0",         # ASGI 서버

    # ===== Database & Cache =====
    "supabase>=2.20.0",                  # Supabase Python 클라이언트 

    # ===== Configuration =====
    "pydantic>=2.0.0",                   # 데이터 검증
    "pydantic-settings>=2.0.0",          # 환경변수 설정 관리
    "python-dotenv>=1.0.0",              # .env 파일 로드

    # ===== Utilities =====
    "httpx>=0.27.0",                     # 비동기 HTTP 클라이언트
    "loguru>=0.7.0",                     # 로깅 라이브러리
    "orjson>=3.10.0",                    # 빠른 JSON 처리

    # Gradio UI
    "gradio>=5.0.0",                     # 웹 UI 프레임워크

    # SSE 스트리밍
    "sse-starlette>=2.1.0",              # Server-Sent Events 지원
]

[project.optional-dependencies]
# 개발/테스트용 의존성 강화
dev = [
    "pytest>=8.0.0",                     # 테스트 프레임워크
    "pytest-asyncio>=0.24.0",            # 비동기 테스트 지원
    "pytest-cov>=4.0.0",                 # 커버리지 리포트
    "black>=24.0.0",                     # 코드 포매터
    "ruff>=0.8.0",                       # 린터 (flake8 대체)
    "mypy>=1.0.0",                       # 타입 체커
    "pre-commit>=4.0.0",                 # Git 훅 관리
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# =============================================================
# Pytest 설정
# =============================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# 테스트 마커 정의
markers = [
    "slow: 느린 테스트 (LLM API 호출)",
    "integration: 통합 테스트",
]
# 기본 옵션
addopts = [
    "-v",
    "--tb=short",
]
# 통합 테스트 제외 (기본)
# 통합 테스트 실행: uv run pytest -m integration
filterwarnings = [
    "ignore::DeprecationWarning",
]

# =============================================================
# Ruff 설정 (린터)
# =============================================================
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# 활성화할 규칙
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
# 무시할 규칙
ignore = [
    "E501",   # line too long (black이 처리)
    "B008",   # function call in default argument (FastAPI Depends)
    "B904",   # raise without from (의도적인 경우)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "C4"]  # 테스트 파일은 일부 규칙 완화

[tool.ruff.lint.isort]
known-first-party = ["app"]

# =============================================================
# Black 설정 (포매터)
# =============================================================
[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.mypy_cache
)/
'''
